# emgband

./: .ignore  EMG-Amplifier.csv  README  README.md  TIMELINE.md  hardware.md  notes.md
2_LSA/: claw.txt  claw_voltages.txt  idel.txt  idle.txt  idle_closed.txt  index_finger.txt  index_voltages.txt  left_hand_voltage.txt  left_hand_voltages.txt  partitions.csv  pinch_voltage.txt  read_serial.py  readings.txt  sdkconfig  sdkconfig.old
2_LSA/main/: CMakeLists.txt  data.csv  emg.c  load_data.py  model.py  (+3 more)
Code/: Muskel.c  Readme.txt  esp_now_sender.c  mac_address_retriver.c
Code/esp_now_sender/main/: CMakeLists.txt  main.c
EMG-Amplifier/: EMG-Amplifier.kicad_prl  EMG-Amplifier.kicad_pro  EMG-Amplifier.kicad_sch  README  ~EMG-Amplifier.kicad_sch.lck
EMG-Firmware/: CMakeLists.txt  sdkconfig.old
Eklavya-2024/: Bi-Weekly Meet 2.md
Notes/: CAD Modeling Workshop.md  EMG_Armband.md  GitGithub.md  The Fast Fourier Transform (FF.md
blog/: blog.md
interface/: app.py  cleanespread.py  digitalfilter.py  requirements.txt
ml/: README  README.md  cnn.py  data_load.py  emg_moment_prediction_model.h  emg_moment_prediction_model_cnn2d_lstm.h5  emg_moment_prediction_model_cnnlstm.h5  emg_moment_prediction_model_cnnlstm_further_trained.h5  gesture_recognition_model.h5  inference.py  model.py  model_cnn.py  model_cnn_lstm.py  model_converter.py  requirement.txt  run.py  shaunak.py
muskel/: CMakeLists.txt  README  README.md  all.txt  claw.athu  claw.txt  claw_final1.txt  ew.txt  index.txt  index_final1.txt  middle_finger_final1.txt  prajwal_pinky.txt  sdkconfig  thumb.athu
(+80 files in other folders)
